fix "position jump" after first move board module

--- a/src/modules/Board/Board.scss
+++ b/src/modules/Board/Board.scss
@@ -3,4 +3,6 @@
     color: wheat;
     border: 1px solid #0074D9;
     position: absolute;
+    left:0;
+    top:0;
 }
